--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  padding: 100px 5%;
+  background-color: beige;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: rgb(45, 45, 190);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 50px;
+  width: 100%;
+}
+
+.article {
+  width: 20%;
+  height: 200px;
+  padding: 30px;
+  border: solid  rgb(45, 45, 190) 2px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.article h1 {
+  color: rgb(163, 160, 160);
+  font-style: italic;
+}
+
+.article span {
+  text-align: right;
+  color: brown;
+  font-weight: bold;
+  font-size: x-large;
+  padding: 15px;
+  background-color: white;
+  border-radius: 15px;
+  border: solid 2px brown;
+  align-self: flex-end;
+  max-width: max-content;
+}
+
+.article:nth-child(3) span, .article:nth-child(3) h1 {
+  text-transform: uppercase;
 }
